--- a/config/schemas/brief.yaml
+++ b/config/schemas/brief.yaml
@@ -47,7 +47,7 @@ properties:
           type: integer
           minimum: 1
           maximum: 5
-          description: "Priority of the user story"
+          description: "Priority of the user story. Priority 1 is highest and Priority 5 is lowest."
       required: [id, role, goal, reason]
     description: "User stories describing interactions with the system"
   technologies:
